# ProgettoTetris

./: .gitignore  CMakeLists.txt  README.md  c  classifica..cpp  classifica.hpp  dellachat.cpp  g  graphics.cpp  main.cpp  prova  prova.txt  select.cpp  tasks  test.cpp  tetris
Classifica/: classifica.cpp  classifica.hpp  classifica.json
Collisioni/: Collisioni.cpp  Collisioni.hpp  CollisioniLungo.cpp  CollisioniLungo.hpp  CollisioniNuovo.cpp  CollisioniNuovo.hpp  CollisioniQuadrato.cpp  CollisioniQuadrato.hpp
Engine/: Engine.cpp  Engine.hpp
FileManagement/: File.cpp  File.hpp
Giocatore/: Giocatore.cpp  Giocatore.hpp  prova.txt  t  t.cpp
HandlerClassifica/: HandlerClassifica.cpp  HandlerClassifica.hpp
HandlerLeaderboard/: HandlerLeaderboard.cpp  HandlerLeaderboard.hpp
Player/: Player.cpp  Player.hpp
Random/: Random.cpp  Random.hpp
ScoreManager/: ScoreManager.cpp  ScoreManager.hpp
Screen/: Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  Home.cpp  Home.hpp  Leaderboard.cpp  Leaderboard.hpp  Name.cpp  Name.hpp  NextT.cpp  NextT.hpp  Screen.cpp  Screen.hpp  ScreenG.cpp  ScreenG.hpp  SideBar.cpp  SideBar.hpp
ScreenLeaderboard/: Lead.cpp  Lead.hpp
Tetramino/: GestionePezzi.cpp  GestionePezzi.hpp  Tetramino.cpp  Tetramino.hpp  TetraminoLungo.cpp  TetraminoLungo.hpp  TetraminoNuovo.cpp  TetraminoNuovo.hpp  TetraminoQuadrato.cpp  TetraminoQuadrato.hpp
backup/b1/: t.cpp
backup/b1/Classifica/: classifica.cpp  classifica.hpp
backup/b1/Giocatore/: Giocatore.cpp
backup/b1/fileManagement/: file.hpp
backup/b1/test/: test.cpp
backup/b2/: CMakeLists.txt  main.cpp
backup/b2/Classifica/: classifica.cpp
backup/b2/Giocatore/: Giocatore.cpp
backup/b2/fileManagement/: file.cpp
backup/fileManagement/: file.cpp
fileManagement/: file.cpp  file.hpp  main.cpp
